# e-footprint-interface

./: .dockerignore  .editorconfig  .gcloudignore  .gitignore  CHANGELOG.md  DEPLOY_TO_PROD.md  Dockerfile  INSTALL.md  LICENSE  README.md  RELEASE_PROCESS.md  System footprints.html  app.yaml  cypress-test.config.ts  cypress.config.ts  main.py  manage.py  object_inputs_and_default_values.json  package-lock.json  package.json  pyproject.toml  requirements.txt  utils.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  renovate.yml
analyze/: tests.py  urls.py  views.py
analyze/templates/: analyze.html  display-value.html  graph-container.html  header-graph.html  response.html
cypress/: tsconfig.json
cypress/downloads/: efootprint-model-system-data.json
cypress/e2e/: add-genAI-service-on-low-gpu-server.cy.js  add_first_job.cy.js  analyze.spec.ts  calculus_graph.cy.js  calculus_graph_multiple.cy.js  check_max_form_timeseries.cy.js  edit-genAI-model.cy.js  end-to-end.cy.js  end-to-end.cy.ts  modal_result_exception.cy.js  quiz.spec.ts  re_open_timeseries.cy.js  reboot_model.cy.js  result_panel.cy.js  test_calculus_graph.cy.js  test_model_canva.cy.js  test_result_panel.cy.js  test_services.cy.js  test_timeseries.cy.js  test_toolbar_features.cy.js  upload_json.cy.js  upload_json_with_current_data.cy.js
cypress/fixtures/: efootprint-model-no-job.json  efootprint-model-system-data-multiple.json  efootprint-model-system-data.json  model-test-uj-not-linked-to-uj-step.json
cypress/support/: commands.ts  component.js
e_footprint_interface/: asgi.py  latency_middleware.py  settings.py  urls.py  views.py  wsgi.py
e_footprint_interface/e_footprint_interface/: urls.py
efootprint_extensions/: usage_pattern_from_form.py
js_tests/: result_charts.test.js  timeseries.test.js  timeseries_utils.test.js  usage_pattern_timeseries.test.js
js_tests/timeseries_files_test/: list_month.csv  list_year.csv  test_emissions_daily.csv
model_builder/: apps.py  class_structure.py  default_countries.json  default_hardwares.json  default_networks.json  default_system_data.json  drawflow_utils.py  e-footprint_object_structure_builder.py  model_web.py  modeling_objects_web.py  models.py  object_creation_and_edition_utils.py  object_creation_utils.py  test_structure.py  test_web_efootprint_wrappers.py  tests.py  urls.py  views.py  views_addition.py  views_deletion.py  views_edition.py  web_efootprint_wrappers.py  web_models.py
model_builder/efootprint_extensions/: usage_pattern_from_form.py
quiz/: tests.py  urls.py  views.py
quiz/templates/: apis.html  home.html  (+6 more)
tests/: test_model_web.py  test_structure.py  test_web_efootprint_wrappers.py
(+206 files in other folders)
