# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.poetry]
name = "efootprint-interface"
version = "0.0.1"
description = "Digital service environmental footprint model interface"
authors = ["Vincent Villet", "Hugo Rince", "Mohamed Amine Chalouati", "Arnaud Flaesch"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | __pychache__
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry.dependencies]
python = "^3.10"
efootprint = "2.1.6"
django = "^5.0"
pylint = "^3.2.1"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.12.1"
django-environ = "^0"
google-cloud-secret-manager = "^2.20"
google-api-python-client = "2.134.0"
oauth2client = "^4.1"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
